@@ -257,9 +257,8 @@ public class GenerateController implements GenerateAPI {
         return Mono.just(
                 new ServiceResult(
                         HttpStatus.INTERNAL_SERVER_ERROR.value(),
-                        String.format(
-                                "Unexpected error calling %s service: %s",
-                                serviceType.getId(), throwable.getMessage())));
+                        "Unexpected error calling %s service: %s"
+                                .formatted(serviceType.getId(), throwable.getMessage())));
     }
 
     private static String getErrorMessage(
@@ -270,8 +269,8 @@ public class GenerateController implements GenerateAPI {
         } else {
             // Reverted diagnostic change in message format
             errorMessage =
-                    String.format(
-                            "Error from %s service: %s", serviceType.getId(), detailMessage.trim());
+                    "Error from %s service: %s"
+                            .formatted(serviceType.getId(), detailMessage.trim());
         }
         return errorMessage;
     }
@@ -363,13 +362,12 @@ public class GenerateController implements GenerateAPI {
             } else if (failedService != null) {
                 // Use a generic client-facing message by default
                 errorMessage =
-                        String.format("Error generating data in %s service", failedService.getId());
+                        "Error generating data in %s service".formatted(failedService.getId());
 
                 if (exposeUpstreamErrors) {
                     String serviceSpecificDetail =
-                            String.format(
-                                    "Error from %s service: %s",
-                                    failedService.getId(), specificErrorMessage.trim());
+                            "Error from %s service: %s"
+                                    .formatted(failedService.getId(), specificErrorMessage.trim());
                     serviceResponsesMap.put(failedService.getId(), serviceSpecificDetail);
                 } else {
                     // Store only a generic marker in serviceResponsesMap to avoid leaking details
@@ -380,8 +378,7 @@ public class GenerateController implements GenerateAPI {
                 // Unknown failed service: don't include upstream body in client message by default
                 if (exposeUpstreamErrors) {
                     errorMessage =
-                            String.format(
-                                    "Error from unknown service: %s", specificErrorMessage.trim());
+                            "Error from unknown service: %s".formatted(specificErrorMessage.trim());
                 } else {
                     errorMessage = "Error from upstream service";
                 }
@@ -392,8 +389,7 @@ public class GenerateController implements GenerateAPI {
 
         if ("An unexpected error occurred during data generation.".equals(errorMessage)
                 && failedService != null) {
-            errorMessage =
-                    String.format("Error generating data in %s service", failedService.getId());
+            errorMessage = "Error generating data in %s service".formatted(failedService.getId());
         }
 
         return Mono.just(
